========================================
Change log for block_taskchain_navigation
========================================

2022-10-17 (32)
 - add lnks for module types to aid easy selection of modules on access control page.

2022-07-08 (31)
 - improve insertion of script to display grades on course page by not using document.write().

2022-03-02 (30)
 - add zerbra stripes on settings regardlesss of whether not the 'mycourses' element is present

2022-03-01 (29)
 - replace use of deprecated string: grade,core

2022-03-01 (28)
 - add zebra stripes to the settings page if 'itemslect' checkboxes are used

2022-02-28 (27)
 - fix deprecated strings and backgroundimage-size on Moodle 4.x

2022-02-21 (26)
 - do not try to regrade data, forum and glossary activities for which ratings are disabled.

2022-02-02 (24)
 - modify Bootstrap classes so that item select boxes are also shown on small screens

2022-01-24 (23)
 - add new setting to offer link directly to edit page, regardless of course page edit more

2022-01-18 (22)
 - add new setting to allow section number of to prepended to names of single-section categories

2021-09-21 (21)
 - fix code that add checkboxes to allow settings to be copied to similar blocks in other courses

2021-09-14 (20)
 - modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2021-06-18 (29)
 - remove use of the splat-operator, because it causes a syntax error in PHP 5.4

2020-12-14 (27)
 - increase date range to 2050, and allow more granular definition of minutes

2020-10-30 (26)
 - handle faulty grade items grade category does not exist

2020-07-17 (25)
 - fix performance of get_numsections() on Moodle 2.4 - 3.3

2020-07-05 (24)
 - adjust CSS for Boost theme

2020-07-01 (23)
 - add duedate (used by assign) to list of modifiable dates

2020-06-30 (22)
 - add settings for individual grades in the grade book

2020-05-12 (21)
 - small fix to SQL for compatability with PostgreSQL

2019-11-10 (20)